--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.5",
+        "yiisoft/yii2": ">=2.0.6"
     },
     "require-dev": {
+        "phpunit/phpunit": "^4.8"
     },
     "autoload": {
         "psr-0": {
