--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,10 @@ Thumbs.db
 # composer vendor dir
 /vendor
 
-# composer itself is not needed
+# composer stuff
 composer.phar
+composer.lock
+
 
 # Mac DS_Store Files
 .DS_Store
